--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
     <h1>Home</h1>
-    <h2>Revision One</h2>
-    <p>The quick brown fox jumps over the lazy dog</p>
+    <h2>Revision Two</h2>
+    <p>How quickly daft jumping zebras</p>
 
 </body>
 </html>
