--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
     <h1>Home</h1>
-    <h2>Revision Two</h2>
-    <p>How quickly daft jumping zebras</p>
+    <h2>Revision Three</h2>
+    <p>Pack my box with five dozen liquor jugs</p>
 
 </body>
 </html>
