--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <h1>Home</h1>
     <h2>Revision Three</h2>
-    <p>Pack my box with five dozen liquor jugs</p>
+    <p>Heavy boxes perform quick waltzes and jigs</p>
 
 </body>
 </html>
